fix footer min height on mobile

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -424,9 +424,8 @@
 .section-footer 
     position: relative
     height: 100vh
-    min-height: auto
+    min-height: 900px
     width: 100%
-    padding: 5vh 0
 
     .overlay
         display: flex
